# tibia

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-format-and-lint.yml
pypeline/: many.py  maybe.py  pairs.py  pipeline.py  result.py  utils.py
pypeline/pointfree/: casting.py
tests/: conftest.py  curried_example_functions.py  example_functions.py  test_future.py  test_future_maybe.py  test_future_result.py  test_grouper.py  test_many.py  test_maybe.py  test_pairs.py  test_pipeline.py  test_predicate.py  test_result.py  test_utils.py  test_value.py  utils.py
tests/compose/: test_async_compose.py  test_compose.py
tests/iterable/: conftest.py  test_aio.py  test_eager.py  test_lazy.py  test_threaded.py  utils.py
tests/mapping/: conftest.py  test_item.py  test_key.py  test_value.py
tests/maybe/: test_async_maybe.py  test_complex.py  test_maybe.py
tests/pipeline/: test_async_pipeline.py  test_complex.py  test_curried_pipeline.py  test_pipeline.py  test_pipeline_currying.py
tests/pointfree/: test_casting.py  test_many.py
tests/result/: test_async_result.py  test_result.py
tibia/: __init__.py  many.py  maybe.py  pipeline.py  predicate.py  result.py
tibia/iterable/: aio.py  lazy.py  threaded.py
tibia/mapping/: value.py
